# ray-tracer

./: README.md  ray-tracer.cabal
app/: Main.hs
src/: Camera.hs  Color.hs  Lighting.hs  Pixel.hs  Ray.hs  Scene.hs  Surface.hs  Tracer.hs  Vector.hs
