name:                ray-tracer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ray-tracer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tracer
                     , Camera
                     , Color
                     , Pixel
                     , Ray
                     , Scene
                     , Surface
                     , Vector
                     , Lighting
  build-depends:       base >= 4.7 && < 5
                     , colour
                     , repa, repa-io
  default-language:    Haskell2010

executable ray-tracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , colour
                     , repa, repa-io
                     , ray-tracer
  default-language:    Haskell2010

test-suite ray-tracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ray-tracer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ray-tracer
